// Vitest Snapshot v1

exports[`tests InputText as a JS file > should match the snapshot 1`] = `
{
  "description": "Description InputText",
  "displayName": "InputText",
  "events": undefined,
  "exportName": "default",
  "methods": undefined,
  "props": [
    {
      "name": "placeholder",
      "type": {
        "name": "undefined",
      },
    },
  ],
  "slots": undefined,
  "tags": {},
}
`;

exports[`tests InputText as a JS file should match the snapshot 1`] = `
Object {
  "description": "Description InputText",
  "displayName": "InputText",
  "events": undefined,
  "exportName": "default",
  "methods": undefined,
  "props": Array [
    Object {
      "name": "question",
      "type": Object {
        "name": "undefined",
      },
    },
    Object {
      "name": "placeholder",
      "type": Object {
        "name": "undefined",
      },
    },
  ],
  "slots": undefined,
  "tags": Object {},
}
`;
